style.css
@import "https://fonts.googleapis.com/css?family=Roboto:100,300,400,500&display=swap";

body::-webkit-scrollbar {
	width: 10px;
}

body::-webkit-scrollbar-thumb
{
  background-color: #888;
  background-clip: padding-box;
}

body::-webkit-scrollbar-thumb:hover {
  opacity: 0.5;
}

body::-webkit-scrollbar-track {
  background: transparent;
}

html, body {
  height: 100%;
  width: 100%;
  padding: 0 0 0 0;
  margin: 0;
}

img {
  display: block;
}

* {
  box-sizing: border-box;
}

body {
  font-family: 'Roboto', sans-serif;
  color: rgb(80, 80, 80);
  overflow-x: hidden;
}

.main-page {
  padding: 0 13vw 10vw 13vw;
}


section {
  padding: 15vh 0 0 0;
}

p {
  color: rgb(80, 80, 80);
}

h1 {
  font-size: 3em;
}

h1, h2 {
  letter-spacing: 3px;
  color: rgb(40, 40, 40);
}

h2 {
  font-size: 2.5em;
}

a {
  color: #000;
}

.header {
  min-height: 100vh;
  background: #fff;
  color: #000;
  padding: 5vw 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  transition: all 0.8s ease-in-out;
}

.header .img-container {
  width: 30%;
  height: 40%;
  overflow: hidden;
}

.img-container img {
  width: 100%;
  display: block;
}

.content {
  width: 65%;
}

.content p {
  font-size: 1.1em;
  line-height: 1.4em;
}

.content h3:first-child {
  margin-bottom: .2em;
}

#assignments {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  padding-bottom: 20vh;
}

#assignments h2 {
  width: 100%;
  text-align: center;
  margin-bottom: 6%;
}

.assignment-card {
  margin-top: 10vh;
  margin: 0 1% 0 1%;
  min-width: 280px;
  width: 23%;
  height: 32em;
  border-radius: 5px;
  overflow: hidden;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  transition: all 0.3s ease-in-out;
}

.assignment-card:hover {
  transform: scale(1.03);
  opacity: 0.6;
}

.assignment-card .img-container {
  width: 100%;
  height: 50%;
}

.assignment-card .img-container img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.assignment-card {
  text-align: left
}

.assignment-card .content {
  width: 100%;
  text-align: center;
  padding: 0 7%;
}

.assignment-card h3 {
  font-size: 1.7em;
  color: rgb(40, 40, 40);
  letter-spacing: 1px;
}

.gif-container {
  width: 100%;
  height: 100vh;
  overflow: hidden;
  position: relative;
}

.gif-container video {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.gif-container .overlay {
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
}

.gif-container .overlay h2 {
  color: rgba(255, 255, 255, 0.75);
  font-size: 5.5em;
  letter-spacing: 4px;
  text-align: center;
}

#documentation {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 9em;
}

.card-50, .card-100 {
  transition: all 0.3s ease-in-out;
}

.card-50 {
  grid-column: span 1;
  position: relative;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-radius: 5px;
}

.card-50:after {
  content: "";
  display: block;
  padding-bottom: 100%;
}

.card-50 .content{
  position: absolute;
  width: 100%;
  height: 100%;
  overflow: hidden;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-radius: 5px;
}

.card-100 .content{
  width: 100%;
  overflow: hidden;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-radius: 5px;
}

.card-100 {
  grid-column: span 2;
  position: relative;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-radius: 5px;
}

.card-50 .content img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.card-100 .content img {
  width: 100%;
}

.card-50 .title {
  position: absolute;
  background: #a8373c;
  border-radius: 15px;
  z-index: 100;
  left: 2em;
  top: -1.5em;
}

.card-100 .title {
  position: absolute;
  background: #a8373c;
  border-radius: 15px;
  z-index: 100;
  left: 2em;
  top: -1.5em;
}

.title h3 {
  margin: 0.6em;
  font-size: 1.4em;
  letter-spacing: 1px;
  font-weight: 500;
  color: white;
}

footer {
  background-color: rgb(40, 40, 40);
  width: 100%;
  height: 8%;
  padding: 2vh 12vw;
  color: white;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

footer .full-logo {
  display: flex;
  align-items: center;
  height: 100%;
  width: 50%;
  transition: all 0.5s ease-in-out;
}

.copyright {
  transition: all 0.5s ease-in-out;
}

footer a {
  text-decoration: none;
  color: white;
  transition: opacity 0.2s ease-in-out;
}

footer a:visited {
  color: white;
}

.full-logo:hover > * {
  opacity: 0.4;
}

footer h2 {
  color: white;
  margin-right: 1em;
  font-size: 100%;
  letter-spacing: 1px;
  font-weight: 400;
  transition: opacity 0.2s ease-in-out;
  text-align: right;
}

.full-logo a:hover {
  opacity: 1;
}

.full-logo .img-container {
  padding-right: 1.7vh;
  height: 100%;
  width: auto;
  transition: opacity 0.2s ease-in-out;
}

.full-logo .img-container:hover {
  opacity: 1;
}

.full-logo img {
  height: 100%;
  width: auto;
}


main {
  padding: 0;
}

a {
  text-decoration: none;
}

.top-20 {
  transform: translate3d(0, 10%, 0)
}

.right-20 {
  transform: translate3d(30%, 0, 0);
}

.no-opacity {
  opacity: 0;
}

